# GCS

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GCS.sln  GOVERNANCE.md  README.md  SECURITY.md  build_clang_ninja.cmd  build_clang_ninja.ps1  check_balance.py  plan.md
.claude/: current-task  settings.json  settings.local.json
.claude/agents/: README.md  acceptance-officer.md  art-director-frame-judge.md  atelier-steward-calibrate-review.md  benchmark-scout.md  bladesmith-quench-forge.md  bookkeeper.md  collation-officer.md  demo-producer.md  gardener.md  git-session-steward.md  governance-sentinel.md  night-watch.md  release-shepherd.md  tailor-stitch-timeline.md
.claude/skills/: README.md
.codex/: hooks.json
.codex/agents/: acceptance-officer.toml  art-director-frame-judge.toml  atelier-steward-calibrate-review.toml  benchmark-scout.toml  bladesmith-quench-forge.toml  bookkeeper.toml  collation-officer.toml  demo-producer.toml  gardener.toml  git-session-steward.toml  governance-sentinel.toml  night-watch.toml  release-shepherd.toml  tailor-stitch-timeline.toml
.codex_scene_generation_store/: codex_complex10_20260524_run00_c0000_geom_primal.json  codex_complex10_20260524_run00_c0000_promotion_geom_primal.json  codex_complex10_20260524_run01_c0000_geom_primal.json  codex_complex10_20260524_run01_c0000_skel.json  codex_complex10_20260524_run03_c0000_skel.json  codex_complex10_20260524_run04_c0000_gcs.json  codex_complex10_20260524_run04_c0000_geom_primal.json  codex_complex10_20260524_run04_c0000_promotion_geom_primal.json  codex_complex10_20260524_run04_c0000_skel.json  codex_complex10_20260524_run05_c0000_promotion_geom_primal.json  codex_complex10_20260524_run07_c0000_gcs.json  codex_complex10_20260524_run07_c0000_geom_primal.json  codex_complex10_20260524_run07_c0000_skel.json  codex_complex10_20260524_run08_c0000_geom_primal.json  codex_complex10_20260524_run09_c0000_skel.json
.codex_scene_generation_store/public_scenes/: codex_complex10_20260524_run00_c0000_gcs_public_scene.gcs.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-fixture-proposal.yml  03-benchmark-candidate.yml  04-documentation-improvement.yml  config.yml
GCS/: GCS.vcxproj  GCS.vcxproj.filters  Readme.md  requirements.txt  run_display.bat  run_display.py  start_tui.bat
GCS/app/: App.cpp  App.cppm  App.h  main.cpp
GCS/cds/: cds.cpp  cds.cppm  cds.h
GCS/core/: core.cpp  core.cppm  core.h  types.h
GCS/dcm/: dcm.cpp  dcm.cppm  dcm.h
GCS/display/: __init__.py  parser.py  server.py  viewer.py
GCS/gcs_viz/: algebra.py  color_scheme.py  engine_bridge.py  event_store.py  platform.py  platform_gui.py
GCS/io/: io.cpp  io.cppm  io.h
GCS/lgs/: lgs.cpp  lgs.cppm  lgs.h
GCS/model/: __init__.py  graph.py
GCS/test/: build_tests.bat  run_tests.bat  test_framework.h
GCS/tools/: tools.md
apps/gcs_cli/: main.cpp
architecture/: README.md  architecture.md  interface.md
architecture/00-foundations/: problem-formulation.md
architecture/10-system/: current-to-target-map.md  system-topology.md
architecture/20-solver-pipeline/: numerical-solving.md
architecture/40-quality/: verification-strategy.md
architecture/90-references/: commercial-gcs-summary.md
architecture/cds/: cds.md
architecture/core/: core.md
architecture/dcm/: dcm.md
architecture/io/: io.md
architecture/lgs/: lgs.md
architecture/reference/: cds.md  dcm2d.md  dcm3d.md  lgs.md
architecture/test/: test_architecture.md
docs/: current-model.md
docs/agentic/: README.md  agent-permission-policy.md  agent-skill-asset-inventory.md  agent-skill-development-plan.md  agentic-organization-operating-map.md  agentic-se-workflow-operations-plan-20260530.md  agile-pdca-roadmap.md  ai-governance-execution-plan-2026-05-26.md  ai-governance-next-actions.md  critical-issues-registry.md  default-agentic-gate-decision.md  eval-rubric.md  evidence-bundle-template.md  execution-plan-template.md  experience-record-template.md  git-session-branch-plan-2026-05-26.md  governance-eval-roadmap.md  institutional-agent-registry-and-scorecard.md  legacy-artifact-policy.md  lifecycle-runbook.md  long-term-agentic-se-plan.md  metrics-dashboard.md  multi-agent-development-roadmap.md  narrative-weakness-development-plan-20260530.md  near-term-agent-plan.md  next-queue-forward-plan-2026-05-24.md  nightly-immune-diagnostics.md  permission-threat-matrix.md  pr-audit-governance.md  quality-gate-opt-in-policy.md  task-card-template.md  task-to-archive-checklist.md  trace-schema.md
docs/architecture/: 100-medium-term-design.md  101-long-term-design.md  102-aesthetic-taste-reevaluation.md  103-short-term-aesthetic-plan.md  104-plan-documentation-audit.md  105-long-term-aesthetic-design.md  60-agentic-submodule-design-analysis.md  61-agentic-module-framework.md  62-module-agents.md  63-target-contract-interface-implementation-test-design.md  64-physical-agent-skill-catalog.md  65-agentic-implementation-tooling.md  66-implementation-execution-roadmap.md  67-current-progress-and-next-steps.md  68-agentic-se-lifecycle-self-evolution.md  68-forward-execution-plan-2026-05-24.md  68-progress-archive-2026-05-24.md  68-step-52-candidate-analysis.md  69-ci-ready-quality-gates.md  71-step-1-40-execution-report.md  72-ui-aesthetic-phase-1-theme-foundation.md  72-ui-aesthetic-phase-2-viewport-semantics.md  72-ui-aesthetic-phase-3-inspector-layout.md  72-ui-aesthetic-phase-4-replay-solve-polish.md  72-ui-aesthetic-phase-5-design-qa-accessibility.md  72-ui-aesthetic-roadmap.md  73-gcs-visual-taste-guide.md  74-scientific-figure-production-paradigm.md  75-ui-design-system-conventions.md  76-ui-design-system-execution-plan.md  77-ui-design-development-plan-report.md  78-ui-token-inventory.md  79-step-41-46-execution-report.md  (+30 more)
scripts/: build_clang_ninja.cmd  build_clang_ninja.ps1  run_quality_gates.cmd  run_quality_gates.ps1  start_gui.cmd
tests/: gcs_contract_tests.cpp
tools/: recent-summary.py
(+1072 files in other folders)
